--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav>
         
-        <li><a href="index page.html"style="text-decoration:none" title="About Page">About</a></li>
+        <li><a href="index.html"style="text-decoration:none" title="About Page">About</a></li>
         <li><a href="Portfolio Page.html"style="text-decoration:none" title="portfolio Page">Portfolio</a></li>
         <li><a href="contact Page.html"style="text-decoration:none" title="Contact Page">Contact</a></li>
 
